--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,6 @@
 h1{
-    text-align:left;
-    color: rgb(255, 255, 255);
+    text-align:center;
     font-family: PT Sans;
-    margin-left: 25px;
+    
 }
 
