--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
-<h1>CoreHR</h1>
+@if (isLoginPage())
+{
+<app-navbar></app-navbar>
+}
 <router-outlet></router-outlet> 
+@if (isLoginPage()){
+<app-footer></app-footer>}
