--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,29 +3,29 @@
     <div class="box">
         <div class="container">
             <div class="top-header">
-                <span>Have an account?</span>
-                <header>Login</header>
+                <span>Vous possedez un compte?</span>
+                <header>S'identifier</header>
             </div>
 
             <div class="input-field">
-                <input type="text" class="input" placeholder="Username" required>
+                <input type="text" class="input" placeholder="Nom d'utilisateur" required>
                 <i class="bx bx-user"></i>
             </div>
             <div class="input-field">
-                <input type="password" class="input" placeholder="Password" required>
+                <input type="password" class="input" placeholder="Mot de passe" required>
                 <i class="bx bx-lock-alt"></i>
             </div>
             <div class="input-field">
-                <input type="submit" class="submit" value="Login">
+                <button type="submit" class="submit"><a [routerLink]="['/main']" routerLinkActive="active" ariaCurrentWhenActive="page" style="text-decoration: none;" >Se connecter</a></button>
             </div>
 
             <div class="bottom">
                 <div class="left">
                     <input type="checkbox"  id="check">
-                    <label for="check"> Remember Me</label>
+                    <label for="check"> Se souvenir de moi</label>
                 </div>
                 <div class="right">
-                    <label><a href="#">Create account! </a></label>
+                    <label><a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page">Créer compte! </a></label>
                 </div>
             </div>
         </div>
